--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,10 @@ description-file = README.md
 [pytest]
 testpaths = tests
 
+[build_sphinx]
+source-dir = docs/
+build-dir  = docs/_build
+all_files  = 1
+
+[upload_sphinx]
+upload-dir = docs/_build/html
